@@ -23,6 +23,11 @@ module Fairy
   CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
   CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
 
+  CONF.SORT_SAMPLING_MIN = 100
+  CONF.SORT_SAMPLING_MAX = 10000
+  CONF.SORT_SAMPLING_RATIO_1_TO = 100
+  CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
+
   CONF.VF_ROOT = CONF.HOME+"/test/Repos"
   CONF.VF_PREFIX = `hostname`.chomp
 
